[gd_scene load_steps=5 format=3 uid="uid://bon2jdlcwqgiw"]

[ext_resource type="Script" uid="uid://ci377c1f123v5" path="res://scripts/ingame_ui.gd" id="1_v3yap"]
[ext_resource type="PackedScene" uid="uid://cp0rfiy543qbj" path="res://scenes/timer.tscn" id="2_cm6yq"]
[ext_resource type="PackedScene" uid="uid://cwnldookuoxx2" path="res://scenes/target_ui.tscn" id="2_f6424"]
[ext_resource type="PackedScene" uid="uid://cn4umnxmqbesx" path="res://scenes/textbox.tscn" id="4_hifx3"]

[node name="ingameUI" type="CanvasLayer"]
script = ExtResource("1_v3yap")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="topHalf" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 324.0
grow_horizontal = 2

[node name="left" type="Control" parent="Control/topHalf"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/topHalf/left"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Control/topHalf/left/MarginContainer"]
layout_mode = 2

[node name="lblDebug" type="Label" parent="Control/topHalf/left/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Speed:"

[node name="right" type="Control" parent="Control/topHalf"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Timer" parent="Control/topHalf/right" instance=ExtResource("2_cm6yq")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -492.0
offset_right = 4.0
offset_bottom = 176.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Target UI" parent="Control/topHalf/right" instance=ExtResource("2_f6424")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_top = 100.0
offset_right = 0.0
offset_bottom = 145.00015
grow_horizontal = 0
alignment = 2

[node name="Control" type="Control" parent="Control/topHalf"]
layout_mode = 2

[node name="bottomHalf" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -324.0
grow_horizontal = 2
grow_vertical = 0

[node name="Textbox" parent="Control/bottomHalf" instance=ExtResource("4_hifx3")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Saving" type="Label" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Saving..."
